			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04i: *********************************

BUG: (4/11/06, GVG) Bug in mouseOver highlighter introduced on 4/5/06
FIX: Highlighter.overHighlighted() returns the unique element overlapping so mouseOver highlighter never grows more than 1.

BUG: (4/11/06, DN) Keyboard input doesn't work: z - zoom, s - select (Bug #925).
FIX: In EditMenu.java use KeyStroke.getKeyStroke(ch, 0) instead of KeyStroke.getKeyStroke(ch).

IMP: (4/9/06, GVG) Cleaning extra Comparators.

IMP: (4/9/06, DN) Menu API changed: Tools make generic menus EMenu which are
   used to generate actual JMenus for every window. This is preparation to fix bug #890.

IMP: (4/8/06, GVG) More changes in AFG including AFG exclusion regions working.

BUG: (4/5/06, GVG) Network highlight does not highlight (Bug #921). It also covers #716.
FIX: Major changes in Highlighter and Highlight2 classes.
(1). Making sure mouseOverHighlight contains only 1 element (changes in ClickZoomWireListener.mouseOver, Highlighter.findObject)
(2). Optimization in Highlighter.showHighlights().
(3). showInternalHighlight for NodeInst only highlights objects electrically connected to it only if 1 highlight element is drawn.
The code is not efficient and extremely time consuming. Eg. DrawTime(2415 HighlightEOBJ)=43925 msecs, DrawTime(1445)=10 msecs.
This might be a temporary solution until code is rewritten

IMP: (4/6/06, GVG) Adding AFG exclusion regions.

BUG: (4/5/06, GVG) Another NullPointerException when making certain layers invisible (Bug #920)
FIX: This is not a permanent fix, just detecting that index doesn't go over greekedCell.fadeImageColors.length.

BUG: (4/5/06, GVG) Highlighter selects wrong object when dialog windows are open (Bug #917).
FIX: Error in Highlight2.getInfo(): it changed eobj value.

BUG: (4/5/06, SMR) Export names are not incremented properly (Bug #916).